--- a/styleheet/style.css
+++ b/styleheet/style.css
@@ -34,10 +34,10 @@ header {
   color: inherit;
 }
 .rent {
-  background-image: url(night-bg.jpg);
+  background-image: url(../images/night-bg.jpg);
   background-position: center;
   color: #d4d4d4;
-  /* padding: 58px; */
+  padding: 0 0 2rem 0;
 }
 
 .note {
@@ -55,15 +55,18 @@ header {
   align-content: center;
   margin: auto;
   border-radius: 1.5rem;
-  position: relative;
+  position: absolute;
   text-align: center;
+
+  right: 0;
+  left: 0;
 }
 
 .int {
   background-color: #d35266;
   text-align: center;
   padding: 2px;
-  margin-top: 3px;
+  /* margin-top: 3px; */
 }
 
 .form-input {
@@ -76,8 +79,7 @@ header {
 }
 
 .int-work {
-  margin: 2rem;
-  margin-left: 25%;
+  margin: 6rem auto auto 5.2rem;
 }
 
 @media (min-width: 568px) {
@@ -115,6 +117,9 @@ header {
     display: flex;
   }
 
+  .rent {
+    padding: 0 0 2rem 0;
+  }
   .form-input {
     max-width: 50%;
   }
@@ -130,12 +135,13 @@ header {
   .form {
     height: 150px;
     width: 50%;
-    padding: 30px;
+    padding-top: 0px;
   }
 
   .int-work {
-    margin: 60px;
-    color: red;
+    color: gray;
+    margin: 7rem auto auto 9rem;
+    width: 9rem;
   }
 }
 
@@ -146,6 +152,39 @@ header {
   .form {
     width: 40%;
   }
+
+  .int-work {
+    margin: 7rem 0 0 13rem;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 4rem;
+  }
+}
+
+.main-content img {
+  height: 70px;
+
+  margin-left: 45%;
+  padding: 2rem 0 0 0;
+}
+
+.main-content h2 {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  margin: 3px;
+  padding: 18px;
+}
+.para {
+  text-align: center;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 1.2rem;
+  color: gray;
+  padding: 0 20px 0 20px;
 }
 
 /*
