--- a/styleheet/detail.css
+++ b/styleheet/detail.css
@@ -5,15 +5,16 @@ header {
 
 .flex {
   display: block;
-  /* background-color: #d4d4d8; */
 }
 
 .none {
   display: none;
 }
 
-.logo {
-  margin-left: 30%;
+.head img {
+  width: 90px;
+  padding: 10px;
+  margin-left: 90px;
 }
 
 .nav-bar {
@@ -87,7 +88,7 @@ header {
 .lekki-house {
   border: 2px solid #d4d4d4;
   margin: 0 10% 12px 10%;
-  padding:12px;
+  padding: 12px;
 }
 
 .lekk {
@@ -117,23 +118,20 @@ header {
 
 .cle {
   margin-left: 12px;
-font-size: 20px;
-font-weight: 600;
-margin-bottom: 12px;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 12px;
 }
-
 
 .space {
   margin-left: 12px;
 }
 
-.space1{
+.space1 {
   display: inline-flex;
-
-
 }
 
-.sub{
+.sub {
   margin-left: 8rem;
   background-color: rgb(0, 89, 255);
   border-style: none;
@@ -144,21 +142,20 @@ margin-bottom: 12px;
   margin-bottom: 30px;
 }
 
-
-.para-article{
+.para-article {
   margin: 0 10% 0 10%;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.3rem;
 }
 
-.click{
+.click {
   background-color: #d4d4d4;
   text-align: center;
-  margin-top: 12PX;
+  margin-top: 12px;
 }
 
-.click a{
+.click a {
   text-decoration: none;
   color: black;
   font-weight: 700;
@@ -170,7 +167,7 @@ margin-bottom: 12px;
   color: #d35266;
   font-weight: 800;
 }
-    /* .form {
+/* .form {
   display: block;
   background-color: lavender;
   width: 70%;
@@ -185,292 +182,316 @@ margin-bottom: 12px;
   right: 0;
   left: 0;
 } */
-    .int {
-    background-color: #d35266;
+.int {
+  background-color: #d35266;
+  text-align: center;
+  padding: 2px;
+  /* margin-top: 3px; */
+}
+
+.form-input {
+  width: 80%;
+
+  box-sizing: border-box;
+  border-radius: 6px;
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.header__burger-bar {
+  display: flex;
+  width: 1.2em;
+  height: 1px;
+  background-color: white;
+  margin: 5px 0;
+  border-radius: 3px;
+}
+
+.header__toggle {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+.header__toggle:checked ~ .mobile-nav {
+  display: block;
+}
+
+.header__toggle:checked + .header__burger > div {
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.header__toggle:checked + .header__burger > div:nth-child(1) {
+  -webkit-transform: rotate(-45deg) translate(-9px, 2px);
+  transform: rotate(-45deg) translate(-9px, 2px);
+}
+
+footer {
+  background-color: black;
+  position: relative;
+  padding: 6px;
+}
+
+.foot {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px;
+}
+
+.foot a {
+  color: white;
+  text-decoration: none;
+}
+
+.foot li {
+  text-transform: uppercase;
+  margin-right: px;
+  padding: 4px;
+}
+
+.subscribe {
+  margin: 12px;
+  color: white;
+}
+
+.contacts {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.about {
+  text-align: center;
+  color: white;
+}
+
+.send {
+  border-radius: 5px;
+}
+
+.ign {
+  width: 40px;
+  height: 50px;
+  margin-left: 40%;
+  border-radius: 50%;
+  border: 1px solid white;
+}
+
+.int-work {
+  margin: 6rem auto auto 5.2rem;
+}
+
+@media (min-width: 768px) {
+  header {
+    max-width: 100%;
+  }
+
+  .logo {
+    margin-left: -90px;
+  }
+
+  .flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 30px;
+  }
+
+  .none {
+    display: inline-flex;
+    margin-left: 0.5rem;
+  }
+
+  .nav-bar {
+    font-size: 18px;
+  }
+
+  .md-flex {
+    display: flex;
+  }
+
+  .price p {
+    border: 2px solid #d4d4d4;
     text-align: center;
-    padding: 2px;
-    /* margin-top: 3px; */
+    line-height: 3rem;
+  }
+
+  .cle {
+    display: flex;
+  }
+
+  .price {
+    width: 18rem;
+  }
+
+  .price-list {
+    margin-right: 10px;
+  }
+
+  .bio-info {
+    margin-left: 15%;
+    line-height: 1.3rem;
+    font-size: 24px;
+    font-weight: 500;
+    margin-top: 50px;
+  }
+
+  .bio input {
+    width: 70%;
+  }
+
+  .sub {
+    margin-left: 32rem;
+    margin-bottom: 11px;
+  }
+
+  .space {
+    margin-left: 12px;
+  }
+
+  .space1 {
+    display: inline-flex;
+    margin-left: 10rem;
+  }
+
+  .space1 li {
+    margin-left: 3px;
+  }
+
+  .rent {
+    padding: 0 0 2rem 0;
   }
 
   .form-input {
-    width: 80%;
-
-    box-sizing: border-box;
-    border-radius: 6px;
-    font-weight: 600;
-    font-size: 20px;
+    max-width: 50%;
   }
 
-  .header__burger-bar {
+  .int {
+    width: 120px;
+    margin-left: 4px;
+    border-radius: 9px;
+    background-color: blue;
+    padding-top: 7px;
+  }
+
+  .foot3 {
     display: flex;
-    width: 1.2em;
-    height: 1px;
-    background-color: white;
-    margin: 5px 0;
-    border-radius: 3px;
-  }
-
-  .header__toggle {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border-width: 0;
-  }
-.header__toggle:checked ~ .mobile-nav {
-    display: block;
-  }
-
-  .header__toggle:checked + .header__burger > div {
-    -webkit-transition: all 0.4s ease;
-    transition: all 0.4s ease;
-  }
-
-  .header__toggle:checked + .header__burger > div:nth-child(1) {
-    -webkit-transform: rotate(-45deg) translate(-9px, 2px);
-    transform: rotate(-45deg) translate(-9px, 2px);
-  }
-
-  footer {
-    background-color: black;
-    position: relative;
-    padding: 6px;
+    margin: 3rem;
   }
 
   .foot {
+    padding: 0;
+    margin-left: auto;
+  }
+
+  .foot5 {
+    margin-left: 4px;
+  }
+
+  .foot8 {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 10px;
-    flex-wrap: wrap;
+    border-top: 2px solid white;
+    border-bottom: 2px solid white;
+    justify-content: space-between;
+    position: relative;
+    margin-left: 0;
   }
 
-  .not {
-    display: ;
+  .ign {
+    margin-left: auto;
+    border-radius: 50%;
+    border: 1px solid white;
+    position: absolute;
+    bottom: -12px;
   }
 
-  .foot a {
-    color: white;
-    text-decoration: none;
-  }
-
-  .foot li {
-    text-transform: uppercase;
-    margin-right: 6px;
-    padding: 4px;
-  }
-
-  .subscribe {
-    margin: 12px;
-    color: white;
-  }
-
-  .contacts {
-    display: flex;
-    justify-content: space-evenly;
+  .md-level {
     align-items: center;
   }
 
   .about {
-    text-align: center;
-    color: white;
+    margin: 20px;
   }
 
-  .send {
-    border-radius: 5px;
-  }
-
-  .ign {
-    width: 20px;
-    height: 25px;
-    position: absolute;
-    margin-left: 17.5rem;
-    border: 1px solid white;
-    border-radius: 50%;
-    padding: 0;
-    background-color: #d4d4d4;
-    margin-top: 9px;
-    top: 0;
-
-    color: red;
+  .form {
+    height: 150px;
+    width: 50%;
+    padding-top: 0px;
   }
 
   .int-work {
-    margin: 6rem auto auto 5.2rem;
+    color: gray;
+    margin: 7rem auto auto 9rem;
+    width: 9rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .int {
+    background-color: #d35266;
+  }
+  .form {
+    width: 70%;
   }
 
-  @media (min-width: 548px) {
-    .head {
-      margin-left: 80px;
-    }
-
-    .int-work {
-      margin: 6rem auto auto 7rem;
-    }
-
-    .ign {
-      margin-left: 19rem;
-    }
+  .form-input {
+    max-width: 100%;
+    padding-left: 6px;
+  }
+  .md-flex {
+    padding-left: 10px;
   }
 
-  @media (min-width: 768px) {
-    header {
-      max-width: 100%;
-    }
-
-    .logo {
-      margin-left: -90px;
-    }
-
-    .flex {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding-right: 30px;
-    }
-
-    .none {
-      display: inline-flex;
-      margin-left: 0.5rem;
-    }
-
-    .nav-bar {
-      font-size: 18px;
-    }
-
-    .md-flex {
-      display: flex;
-
-
-    }
-
-    .price p{
-      border: 2px solid #d4d4d4;
-      text-align: center;
-      line-height: 3rem;
-
-    }
-
-    .cle{
-      display: flex;
-    }
-
-    .price {
-      width:18rem
-
-    }
-
-    .price-list{
-      margin-right: 10px;
-    }
-
-    .bio-info {
-      margin-left: 15%;
-      line-height: 1.3rem;
-      font-size: 24px;
-      font-weight: 500;
-      margin-top: 50px;
-    }
-
-    .bio input {
-      width: 70%;
-    }
-
-    .sub{
-      margin-left: 32rem;
-      margin-bottom: 11px;
-    }
-
-    .space {
-      margin-left: 12px;
-    }
-
-    .space1{
-      display: inline-flex;
-      margin-left:10rem;
-
-    }
-
-    .space1 li{
-      margin-left: 3px;
-    }
-
-    .rent {
-      padding: 0 0 2rem 0;
-    }
-    .form-input {
-      max-width: 50%;
-    }
-
-    .int {
-      width: 120px;
-      margin-left: 4px;
-      border-radius: 9px;
-      background-color: blue;
-      padding-top: 7px;
-    }
-
-    .form {
-      height: 150px;
-      width: 50%;
-      padding-top: 0px;
-    }
-
-    .int-work {
-      color: gray;
-      margin: 7rem auto auto 9rem;
-      width: 9rem;
-    }
+  .price p {
+    border: 2px solid #d4d4d4;
+    text-align: center;
+    line-height: 3rem;
   }
 
-  @media (min-width: 1024px) {
-    .int {
-      background-color: #d35266;
-    }
-    .form {
-      width: 70%;
-    }
+  .cle {
+    display: flex;
+  }
 
-    .form-input {
-      max-width: 100%;
-      padding-left: 6px;
-    }
-    .md-flex {
-      padding-left: 10px;
-    }
+  .price {
+    width: 24rem;
+  }
 
+  .price-list {
+    margin-right: 10px;
+  }
 
+  .int-work {
+    margin: 7rem 0 0 13rem;
+  }
 
-    .price p{
-      border: 2px solid #d4d4d4;
-      text-align: center;
-      line-height: 3rem;
+  .sub {
+    margin-left: 44.5rem;
+  }
+  .bio-info {
+    margin-top: 50px;
+  }
 
-    }
+  .foot3 {
+    justify-content: space-evenly;
+  }
 
-    .cle{
-      display: flex;
-    }
+  .foot li {
+    margin-left: 20px;
+  }
 
-    .price {
-      width:25rem
+  .foot5 {
+    margin-left: -10rem;
+  }
 
-    }
-
-    .price-list{
-      margin-right: 10px;
-    }
-
-    .int-work {
-      margin: 7rem 0 0 13rem;
-    }
-    .bio-info {
-      margin-top: 50px;
-    }
+  .foot6 {
+    margin-left: -1rem;
   }
 }
 
