--- a/styleheet/search.css
+++ b/styleheet/search.css
@@ -38,14 +38,12 @@ header {
   text-decoration: none;
   color: inherit;
 }
+
 .rent {
   /* background-image: url(../images/night-bg.jpg); */
   background-position: center;
   color: #d4d4d4;
   padding: 0 0 2rem 0;
-}
-
-.rent {
   background-color: white;
 }
 
@@ -69,14 +67,9 @@ header {
   display: block;
   background-color: lavender;
   width: 100%;
-  /* height: 150px; */
   padding: 8px;
   align-content: center;
   margin: auto;
-  /* border-radius: 1.5rem; */
-  /* position: absolute; */
-  /* text-align: center; */
-
   right: 0;
   left: 0;
 }
@@ -159,7 +152,6 @@ footer {
 
 .foot li {
   text-transform: uppercase;
-  margin-right: px;
   padding: 4px;
 }
 
@@ -203,7 +195,6 @@ footer {
 
 .form-input {
   width: 80%;
-
   box-sizing: border-box;
   border-radius: 6px;
   font-weight: 600;
@@ -260,6 +251,7 @@ footer {
   .rent {
     padding: 0 0 2rem 0;
   }
+
   .form-input {
     max-width: 50%;
   }
@@ -285,12 +277,13 @@ footer {
     margin-top: 22px;
     margin-left: -9px;
   }
+
   .btn- {
     background-color: rgba(0, 0, 255, 0.398);
   }
 
   .btn_ {
-    background-color: #dd8822;
+    background-color: #d82;
     margin-left: -8px;
   }
 
@@ -350,7 +343,7 @@ footer {
   .form {
     height: 150px;
     width: auto;
-    padding-top: 0px;
+    padding-top: 0;
   }
 
   .int-work {
@@ -380,9 +373,8 @@ footer {
   .foot3 {
     justify-content: center;
   }
+
   /* .ign {
-    margin-left: 30rem;
-  } */
 
   .contacts {
     display: flex;
@@ -480,6 +472,7 @@ footer {
   white-space: nowrap;
   border-width: 0;
 }
+
 /*
 .header__toggle:checked ~ .mobile-nav {
   display: block;
