--- a/styleheet/style.css
+++ b/styleheet/style.css
@@ -9,7 +9,6 @@ header {
 
 .flex {
   display: block;
-  /* background-color: #d4d4d8; */
 }
 
 .head img {
@@ -39,6 +38,7 @@ header {
   text-decoration: none;
   color: inherit;
 }
+
 .rent {
   background-image: url(../images/night-bg.jpg);
   background-position: center;
@@ -81,7 +81,6 @@ header {
   background-color: #d35266;
   text-align: center;
   padding: 2px;
-  /* margin-top: 3px; */
 }
 
 .form-input {
@@ -162,7 +161,7 @@ header {
   .form {
     height: 150px;
     width: 50%;
-    padding-top: 0px;
+    padding-top: 0;
   }
 
   .int-work {
@@ -185,6 +184,7 @@ header {
     max-width: 100%;
     padding-left: 6px;
   }
+
   .md-flex {
     padding-left: 10px;
   }
@@ -202,7 +202,6 @@ header {
 
 .main-content img {
   height: 70px;
-
   margin-left: 45%;
   padding: 2rem 0 0 0;
 }
@@ -274,6 +273,7 @@ header {
   white-space: nowrap;
   border-width: 0;
 }
+
 /*
 .header__toggle:checked ~ .mobile-nav {
   display: block;
