--- a/styleheet/grid.css
+++ b/styleheet/grid.css
@@ -3,7 +3,6 @@
 }
 
 .house-info1 img {
-  /* height: 150px; */
   width: 100%;
 }
 
@@ -27,6 +26,7 @@
     display: flex;
     height: 100%;
     padding: 20px;
+    justify-content: space-between;
   }
 
   .house-info1 img {
