--- a/styleheet/grid.css
+++ b/styleheet/grid.css
@@ -107,13 +107,14 @@ footer {
   width: 20px;
   height: 25px;
   position: absolute;
-  margin-left: 17.5rem;
   border: 1px solid white;
   border-radius: 50%;
   padding: 0;
   background-color: #d4d4d4;
   margin-top: 9px;
-  top: 0;
+  top: 1%;
+  right: 47%;
+  left: 51%;
 }
 
 @media (min-width: 768px) {
