--- a/styleheet/search.css
+++ b/styleheet/search.css
@@ -4,7 +4,11 @@ body {
 
 header {
   background-color: #d35266;
-  width: auto;
+  width: 100%;
+  position:sticky;
+  top: 0;
+  z-index: 10;
+
 }
 
 .flex {
@@ -12,8 +16,22 @@ header {
 }
 
 .head img {
-  width: 90px;
+  width: 100px;
   padding: 10px;
+}
+
+.btn- {
+  background-color: #007bff;
+  border-style: none;
+  height: 1.2rem;
+  margin: 2px; 
+}
+
+.btn_ {
+  background-color: rgba(221, 137, 34, 0.823);
+  margin-left: 20px; 
+  border-style: none;
+  height: 1.2rem;
 }
 
 .none {
@@ -86,6 +104,7 @@ header {
   width: 70%;
   margin: 7px;
   box-sizing: border-box;
+  border-style: none;
 }
 
 .article {
@@ -278,14 +297,14 @@ footer {
   }
 
   .btn {
-    margin-top: 22px;
+    margin-top: 21px;
     margin-left: -9px;
   }
 
   .btn- {
     background-color: #007bff;
     border-style: none;
-    height: 1.2rem;
+    height: 1.1rem;
     margin: 2px;
   }
 
@@ -293,7 +312,7 @@ footer {
     background-color: rgba(221, 137, 34, 0.823);
     margin-left: -6px;
     border-style: none;
-    height: 1.2rem;
+    height: 1.1rem;
   }
 
   .lekki-grid {
