--- a/styleheet/search.css
+++ b/styleheet/search.css
@@ -16,7 +16,7 @@ header {
 }
 
 .head img {
-  width: 100px;
+  width: 110px;
   padding: 10px;
 }
 
@@ -386,6 +386,20 @@ footer {
     padding: 14px;
   }
 
+  select option{
+    font-size: inherit;
+  }
+
+  .select{
+    font-size: larger;
+    font-weight: 500;
+  }
+
+  .btn-,.btn_{
+    height: 1.5rem;
+    width: 7rem;
+  }
+
   .int {
     background-color: #d35266;
   }
@@ -400,7 +414,7 @@ footer {
   }
 
   .foot a {
-    margin-left: 43px;
+    margin-left: 41px;
   }
 
   .foot3 {
